@@ -7,17 +7,27 @@
 # Copyright (c) 2000 by Ajuba Solutions
 # All rights reserved.
 #
-# RCS: @(#) $Id: mime.test,v 1.16 2004/05/13 08:03:04 andreas_kupries Exp $
+# RCS: @(#) $Id: mime.test,v 1.17 2004/05/20 05:36:32 andreas_kupries Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
     namespace import ::tcltest::*
 }
 
+# This code loads md5x, i.e. md5 v2. Proper testing should do one run
+# using md5 v1, aka md5.tcl as well.
+
+package forget md5
+catch {namespace delete md5}
+if {[catch {source [file join [file dirname [file dirname [info script]]] md5 md5x.tcl]} msg]} {
+    puts "skipped [file tail [info script]] (md5x.tcl): $msg"
+    return
+}
+
 package forget mime
 catch {namespace delete mime}
 if {[catch {source [file join [file dirname [info script]] mime.tcl]} msg]} {
-    puts "skipped [file tail [info script]]: $msg"
+    puts "skipped [file tail [info script]] (mime.tcl): $msg"
     return
 }
 
@@ -25,6 +35,7 @@ namespace import mime::*
 
 puts "tcltest [package present tcltest]"
 puts "mime    [package present mime]"
+puts "- md5 [package present md5]"
 
 
 
